2009-08-17  Daniel Elstner  <danielk@openismus.com>

	Make use of new MM_DISABLE_DEPRECATED_API macro

	* configure.ac ({ATK,GDK,GTK}MM_DISABLE_DEPRECATED): Call the
	new MM_ARG_DISABLE_DEPRECATED_API macro from mm-common in
	order to provide the option to omit deprecated API from the
	library build, and to define the corresponding configuration
	macros.

2009-08-17  Daniel Elstner  <daniel.kitta@gmail.com>

	Append slash to overridden $(htmlrefpub)

	* docs/Makefile.am (htmlrefpub): Append trailing slash for
	consistency with the non-overridden value.

2009-08-16  Daniel Elstner  <daniel.kitta@gmail.com>

	Define *_DISABLE_DEPRECATED in config header

	* configure.ac ({ATK,GDK,GTK}MM_DISABLE_DEPRECATED): Go back to
	AC_DEFINE() instead of setting DISABLE_DEPRECATED_API_CFLAGS to
	a list of -D options to pass to the compiler.
	* gdk/gdkmmconfig.h.in (GDKMM_DISABLE_DEPRECATED): Copy #undef
	statement from the config.h.in generated by autoheader.
	* gtk/gtkmmconfig.h.in (GTKMM_DISABLE_DEPRECATED): ditto.

2009-08-16  Daniel Elstner  <daniel.kitta@gmail.com>

	Add missing gdkmm dependency to pkg-config file

	* gtk/gtkmm-2.4.pc.in (Requires): List @GDKMM_MODULE_NAME@ as
	a dependency, since it is not among @GTKMM_MODULES@ already.
	* gtk/gtkmm-2.4-uninstalled.in (Requires): Use @GTKMM_MODULES@
	again instead of @GDKMM_MODULES@.

2009-08-16  Daniel Elstner  <daniel.kitta@gmail.com>

	Update and clean up g[dt]kmmconfig.h

	* gdk/gdkmmconfig.h.in (GDKMM_*_VERSION): Add #undef statements
	for the version number component macros.
	* gtk/gtkmmconfig.h.in: Clean up and copy #undef statements from
	the config.h.in file generated by autoheader.

2009-08-16  Daniel Elstner  <daniel.kitta@gmail.com>

	Provide pkg-config files for uninstalled use

	* atk/atkmm-1.6-uninstalled.pc.in: New pkg-config metadata file
	for building against a non-installed library.
	* gdk/gdkmm-2.4-uninstalled.pc.in: ditto,
	* gtk/gtkmm-2.4-uninstalled.pc.in: ditto.