@@ -1,5 +1,13 @@
 2009-08-17  Daniel Elstner  <danielk@openismus.com>
 
+	Define {ATK,GDK,GTK}MM_BUILD macros
+
+	* atk/atkmm/Makefile.am (local_cppflags): Append -DATKMM_BUILD=1.
+	* gdk/gdkmm/Makefile.am (local_cppflags): Append -DGDKMM_BUILD=1.
+	* gtk/gtkmm/Makefile.am (local_cppflags): Append -DGTKMM_BUILD=1.
+
+2009-08-17  Daniel Elstner  <danielk@openismus.com>
+
 	Make use of new MM_DISABLE_DEPRECATED_API macro
 
 	* configure.ac ({ATK,GDK,GTK}MM_DISABLE_DEPRECATED): Call the
